<resources>
    <string name="app_name">WheeledWalks</string>
    <string name="google_app_id">69164650957</string>
    <string name="action_settings">Settings</string>

    <string name="open_nav_drawer">Opened Nav Drawer</string>
    <string name="close_nav_drawer">Closed Nav Drawer</string>
    <string name="new_walk_warning_message">Make sure all your settings are correct and sensors are calibrated before starting a new walk!</string>
    <string name="finalise_walk_dialog_warning">Warning! This will stop recording and you will not be able to resume!</string>
    <string name="finalise_walk_finalise_btn">FINALISE</string>
    <string name="finalise_walk_description_lable">Walk Description:</string>
    <string name="finalise_walk_choose_thumbnail_btn">Chose Walk Thumbnail</string>
    <string name="finalise_walk_rating_label">Your Rating:</string>
    <string name="finalise_walk_distance_label">Total Distance:</string>
    <string name="finalise_walk_date_label">Date Recorded:</string>
    <string name="finalise_walk_location_label">Walk Location:</string>
    <string name="finalise_walk_name_label">Walk Name:</string>
    <string name="finalise_walk_thumbnail_content_description">Walk thumbnail image</string>
    <string name="finalise_walk_voice_to_text_content_description">Voice to Text</string>
    <string name="new_walk_cancel_button">CANCEL</string>
    <string name="new_walk_save_button">SAVE AND CONTINUE</string>
    <string name="new_walk_heartrate_label">Heart Rate Monitor</string>
    <string name="new_walk_odometer_label">Odometer Sensor Tag</string>
    <string name="new_walk_fixed_tag_label">Fixed Sensor Tag</string>
    <string name="new_walk_sensors_used_title">SENSORS USED:</string>
    <string name="new_walk_platform_label">Recording Platform:</string>
    <string name="new_walk_log_hint">no spaces please</string>
    <string name="new_walk_log_name_label">Log File Name: </string>
    <string name="new_walk_locality_hint">e.g. Leura</string>
    <string name="new_walk_locality_label">Walk Locality:</string>
    <string name="new_walk_name_hint">e.g. Mt. Hay Circuit</string>
    <string name="new_walk_name_label">Walk Name:</string>
    <string name="edit_dialog_fragment_name_label">Name:</string>
    <string name="edit_dialog_fragment_rating_label">Rating:</string>
    <string name="edit_dialog_fragment_grade_label">Grade:</string>
    <string name="edit_dialog_fragment_description_label">Description:</string>
    <string name="edit_dialog_fragment_length_label">Length (m):</string>
    <string name="edit_dialog_fragment_locality_label">Locality:</string>
    <string name="edit_dialog_fragment_delete_button">DELETE</string>
    <string name="edit_dialog_fragment_view_log_button">VIEW LOG</string>
    <string name="edit_dialog_fragment_save_button">SAVE</string>
    <string name="edit_dialog_fragment_discard_changes_button">DISCARD</string>
    <string name="view_log_dialog_ok_button">OK</string>
    <string name="raw_data_fragment_gps_data_heading">Raw GPS Data Values:</string>
    <string name="raw_data_fragment_lattitude_label">Lattitude:</string>
    <string name="raw_data_fragment_longitude_label">Longitude:</string>
    <string name="raw_data_fragment_no_signal_text">NO SIGNAL!</string>
    <string name="raw_data_fragment_accelerometer_data_header">Raw Accelerometer Data Values:</string>
    <string name="raw_data_fragment_accel_x_label">X Value:</string>
    <string name="raw_data_fragment_accel_y_label">Y Value:</string>
    <string name="raw_data_fragment_accel_z_label">Z Value:</string>
    <string name="raw_data_fragment_no_accel_data_text">no data</string>
    <string name="raw_data_fragment_median_accel_header">Median over distance Accelerometer Values:</string>
    <string name="stats_fragment_finalise_button">Finalise Walk</string>
    <string name="map_fragment_add_step_button">Add Step Tag</string>
    <string name="map_fragment_add_obstacle_button">Add Obstacle</string>
    <string name="calibrate_popup_title">Calibrate Popup</string>
    <string name="calibrate_popup_prompt_text">please place phone flat on a level surface and press the calibrate button</string>
    <string name="calibrate_popup_button">calibrate</string>
    <string name="walk_card_edit_button">EDIT</string>
    <string name="walk_card_export_button">EXPORT</string>
    <string name="discard_recording_alert_dialog_text">This will stop recording and delete all logged date!</string>
    <string name="log_file_viewer_dialog_title">Log File Viewer</string>
    <string name="new_walk_log_file_hint">Walk Name and Location required!</string>
    <string name="walk_card_grade_label">Grade:</string>
    <string name="add_obstacle_dialog_add_button">Add Marker</string>
    <string name="ad_obstacle_dialog_cancel_button">Cancel</string>
    <string name="stats_fragment_discard_recording_button">Discard Recording</string>
    <string name="finalise_walk_grade_label">Grade:</string>
    <string name="preference_allow_walk_delete">allow_walk_delete</string>
    <string name="preference_allow_delete_all">allow_delete_all</string>
    <string name="preference_repopulate_database">repopulate_database</string>
    <string name="preference_confirm_deletions">confirm_deletions</string>
    <string name="confirm_delete_message">Confirm Delete?</string>
    <string name="preference_populate_new_walk">auto_populate_new_walk</string>
    <string name="default_date_format">dd/MM/yyyy</string>
    <string name="wake_lock_label">WheeledWalks</string>


    <string-array name="ListArray">
        <item>dd-MM-yyyy</item>
        <item>MM-dd-yyyy</item>

    </string-array>
    <string-array name="ListValues">
        <item>1</item>
        <item>2</item>

    </string-array>

    <string-array name="platform_array">
        <item>Standard Wheelchair</item>
        <item>Mountain Trike</item>
        <item>Pram</item>
        <item>Survey Trailer</item>

    </string-array>

    <string-array name="obstacle_array">
        <item>Fence</item>
        <item>Gate</item>
        <item>Log</item>
        <item>Creek Crossing</item>
        <item>Other</item>

    </string-array>
</resources>
