<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_walk_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/new_walk_name_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_walk_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_walk_name_hint"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_walk_location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/new_walk_locality_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_walk_location_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_walk_locality_hint"

                />
        </LinearLayout>


        <TextView
            android:id="@+id/new_walk_log_filename_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/new_walk_log_name_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/new_walk_log_filename_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_walk_log_file_hint"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_walk_platform_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/new_walk_platform_label"
                android:textSize="18sp" />


            <Spinner
                android:id="@+id/new_walk_equipment_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/platform_array" />

        </LinearLayout>

        <TextView
            android:id="@+id/new_walk_sensors_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/new_walk_sensors_used_title"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/new_walk_fixed_tag_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_walk_fixed_tag_label"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/new_walk_odo_tag_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_walk_odometer_label" />

        <CheckBox
            android:id="@+id/new_walk_heart_monitor_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_walk_heartrate_label" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/walk_description">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/map_fragment_button_divider"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/new_walk_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/map_fragment_button_divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/new_walk_cancel_button" />

        <Button
            android:id="@+id/new_walk_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/map_fragment_button_divider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/new_walk_save_button" />
    </RelativeLayout>

</RelativeLayout>